--- a/WEB APPLICATION/LAB - HTACCESS/.htaccess
+++ b/WEB APPLICATION/LAB - HTACCESS/.htaccess
@@ -7,8 +7,8 @@ RewriteCond %{HTTPS} off
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
 #Redirect error page
-ErrorDocument 404 /error_page/404.html
-ErrorDocument 403 /error_page/403.html
+ErrorDocument 404 /LAB-TelsCode/WEB%20APPLICATION/LAB%20-%20HTACCESS/error_page/404.html
+ErrorDocument 403 /LAB-TelsCode/WEB%20APPLICATION/LAB%20-%20HTACCESS/error_page/403.html
 
 #Block IP
 Deny from 127.0.0.1
